--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
 <html>
+
     <head>
         <title>Jaewon's Homepage</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="main.css" />
     </head>
+    
     <body> 
         <div class="logotext">
-            <h2>Hello!
-                <br>My name is Jaewon</h2>
+            <h2>안녕하세요!
+                <br>저는 이재원입니다!!</h2>
             </div>
              <div class="text">
                 <ul>
@@ -19,3 +21,4 @@
             </div>    
     </body>
 </html>
+
