--- a/aboutme.html
+++ b/aboutme.html
@@ -2,9 +2,9 @@
 <html>
     
     <head>
-        <title>Jaewon's Homepage</title>
+        <title>Jaewon's aboutme.html</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="aboutme_html.css"/>
+        <link rel="stylesheet" type="text/css" href="html.css"/>
     </head>
 
 
@@ -12,14 +12,14 @@
 
         <header>
             <div class="header">
-                <h1> 안녕하세요! 저는 이재원입니다!</h1>
+                <h1> Welcome to Jaewon's Homepage! </h1>
             </div>
         </header>
 
         <nav>
             <div class="nav">
                 <ul>
-                    <li> <a class="active" href="aboutme.html">about me</a></li>
+                    <li> <a href="aboutme.html">about me</a></li>
                     <li> <a href="like.html">like</a></li>
                     <li> <a href="want.html">want</a></li>
             </div>
@@ -28,7 +28,7 @@
         <main>
 
             <div class="flex-container" >
-                <div class="flex-item">1</div>
+                <div class="flex-item"> 1 </div>
                 <div class="flex-item">2</div>
                 <div class="flex-item">3</div>
             </div>
