--- a/like.html
+++ b/like.html
@@ -26,8 +26,7 @@
 
         <main>
             <div class="container">
-                <div class="content1">
-
+                <div class="content">
                     <div class="text">
                         <h2>카페</h2>
                         <p>인스타 감성, 분위기 있는 카페를 좋아한다.</p>
@@ -37,7 +36,29 @@
                         <div class="img">
                             <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_172639586.jpg" alt="photo"> 
                         </div>
-                       
+
+                        <div class="img">
+                            <img src="C:\Users\esthe\OneDrive\바탕 화면\cafe1.jpg" alt="photo"> 
+                        </div>
+                    </div>
+                </div>
+
+                <div class="content">
+                    <div class="text">
+                        <h2>토끼</h2>
+                        <p> 집에서 키우는 우리 토실이, 토깽이!! 울 애기들ㅎㅎ
+                            <br> 애기처럼 보이는 요놈들은 벌써 10년차된 늙은이당.. 내 눈에는 애기양ㅜㅜ
+                            <br> 바나나를 진짜 좋아한다. 바나나를 맛있게 먹는 모습은 넘나 귀엽담>< </p>
+                    </div>
+
+                    <div class="photo-wrapper">
+                        <div class="img">
+                            <img src="C:\Users\esthe\OneDrive\바탕 화면\rabbit.jpg" alt="photo"> 
+                        </div>
+
+                        <div class="img">
+                            <img src="C:\Users\esthe\OneDrive\바탕 화면\rabbit2.jpg" alt="photo"> 
+                        </div>
                     </div>
                 </div>
             </div>
