--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <head>
         <title>Jaewon's aboutme.html</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="html.css"/>
+        <link rel="stylesheet" type="text/css" href="aboutme_html.css"/>
     </head>
 
 
@@ -28,13 +28,13 @@
             <div class="container">
                 <div class="content1">
                     <div class="container img">
-                        <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_172639586.jpg" alt="photo">               
+                        <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_231617010.jpg" alt="photo">               
                     </div>
             
                     <div class="container text">
                         <h2> 단국대 소프트웨어학과 전공</h2>
                         <p> 단국대 소프트웨어학과 19학번입니다. 
-                            <br> C, python 언어 위주의 개발 경험이 있으며 Java & Android도 사용 가능합니다.</p>
+                            <br> C, python 언어 위주의 개발 경험이 있으며 Java & Android 사용 가능합니다.</p>
                     </div>
                 </div>
             </div>
