--- a/aboutme.html
+++ b/aboutme.html
@@ -98,7 +98,7 @@
                 <div class="content">
                     <h2 style="font-size: xx-large"> 💜 Career</h2>
                     <div class="table" style="font-size: 20px">
-                        <table>
+                        <table style="border-collapse:collapse">
                             <tr>
                                 <th> Type </th>
                                 <th> Date </th>
