--- a/like.html
+++ b/like.html
@@ -17,10 +17,11 @@
 
         <nav>
             <div class="nav">
-                <ul>
+                <ul id="ul">
                     <li> <a href="aboutme.html">about me</a></li>
                     <li> <a href="like.html">like</a></li>
                     <li> <a href="want.html">want</a></li>
+                </ul>
             </div>
         </nav>
 
@@ -28,11 +29,16 @@
             <div class="container">
                 <div class="content">
                     <div class="text">
-                        <h2>카페</h2>
-                        <p>인스타 감성, 분위기 있는 카페를 좋아한다.</p>
+                        <h2> # 카페 탐방 </h2>
+                        <p>인스타 감성, 분위기 있는 카페탐방을 좋아한다ㅎㅎ
+                            <br> 가본 곳 중 추천할만한 곳은,,,음 너무 많은데ㅋㅋ
+                            <br> 신사역 테일러커피, 안국역 커피브론즈가 기억에 남는당 @_@
+                            <br> 신봉동 솔루션 산미있는 커피 즐기는 사람이라면 추천 bb 
+                            <br> 고소한 아이스 라떼 먹으려면 무조건 C2 베이커리랑 수퍼샌드위치로 고고~!
+                        </p>
                     </div>
 
-                    <div class="photo-wrapper">
+                    <div class="img-wrapper">
                         <div class="img">
                             <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_172639586.jpg" alt="photo"> 
                         </div>
@@ -42,16 +48,20 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
+            <div class="container">
                 <div class="content">
                     <div class="text">
-                        <h2>토끼</h2>
+                        <h2> # 토끼</h2>
                         <p> 집에서 키우는 우리 토실이, 토깽이!! 울 애기들ㅎㅎ
-                            <br> 애기처럼 보이는 요놈들은 벌써 10년차된 늙은이당.. 내 눈에는 애기양ㅜㅜ
+                            <br> 애기처럼 보이는 요놈들은 벌써 10년차된 늙은이당.. 
+                            <br> 내 눈에는 애기양ㅜㅜ 어릴때 둘이 사이 진짜 좋았는데,, 
+                            <br> 중성화를 안해서 떼어놓은지 벌써 n년차,, 미안행 얘두람ㅜㅜ;;
                             <br> 바나나를 진짜 좋아한다. 바나나를 맛있게 먹는 모습은 넘나 귀엽담>< </p>
                     </div>
 
-                    <div class="photo-wrapper">
+                    <div class="img-wrapper">
                         <div class="img">
                             <img src="C:\Users\esthe\OneDrive\바탕 화면\rabbit.jpg" alt="photo"> 
                         </div>
@@ -67,8 +77,8 @@
         
         <footer>
             <div class="footer">
-                <div class="footer img-wrapper">
-                    <div class="img">
+                <div class="img-wrapper">
+                    <div class="footer img">
                         <a href="https://github.com/esther9909/Open_source_Midterm">
                             <img src="C:\Users\esthe\OneDrive\바탕 화면\github.png" alt="git">
                          </a>   
