--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!doctype html>
-<html>
 
+<html>
     <head>
         <title>Jaewon's Homepage</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="main.css" />
+        <link rel="stylesheet" type="text/css" href="jaewon's web.css" />
     </head>
-    
+
     <body> 
+            <video autoplay loop muted>
+                <source src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_214547332.mp4" type="video/mp4">
+            </video>
+
         <div class="logotext">
-            <h2>안녕하세요!
-                <br>저는 이재원입니다!!</h2>
+            <h2> Hello👋
+                <br>Welcome to Jaewon's Homepage!</h2>
             </div>
-             <div class="text">
-                <ul>
-                    <div class="li"><h4>About me</h4></div>
-                    <div class="li"><h4>Like</h4></div>
-                    <div class="li"><h4>Want</h4></div>
+            
+            <div class="text">
+                <ul style="line-height:100%;">
+                    <li> <a href="aboutme.html">About me</a></li>
+                    <li> <a href="like.html">Like</a></li>
+                    <li> <a href="want.html">Want</a></li>
                 </ul>
-            </div>    
+            </div>      
     </body>
 </html>
+
+
 
