--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
                     <div class="container text">
                         <h2> 👋 Profile </h2>
                         <div class="container img">
-                            <img id="myimg" src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220504_192119134.jpg" alt="img">
+                            <img id="myimg" src="jaewon.jpg" alt="img">
                         </div>
                         <p> <br>
                             Name : Jaewon Lee <br>
