--- a/like.html
+++ b/like.html
@@ -40,11 +40,11 @@
 
                     <div class="img-wrapper">
                         <div class="img">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_172639586.jpg" alt="photo"> 
+                            <img src="cafebronze.jpg" alt="photo"> 
                         </div>
 
                         <div class="img">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\cafe1.jpg" alt="photo"> 
+                            <img src="cafe1.jpg" alt="photo"> 
                         </div>
                     </div>
                 </div>
@@ -63,11 +63,11 @@
 
                     <div class="img-wrapper">
                         <div class="img">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\rabbit.jpg" alt="photo"> 
+                            <img src="rabbit.jpg" alt="photo"> 
                         </div>
 
                         <div class="img">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\rabbit2.jpg" alt="photo"> 
+                            <img src="rabbit2.jpg" alt="photo"> 
                         </div>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="img-wrapper">
                     <div class="footer img">
                         <a href="https://github.com/esther9909/Open_source_Midterm">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\github.png" alt="git">
+                            <img src="github.png" alt="git">
                          </a>   
                     </div>
                     
