--- a/want.html
+++ b/want.html
@@ -30,7 +30,7 @@
             <div class="content">
 
                 <div class="container img">
-                    <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_214441286.jpg" alt="img">               
+                    <img src="teacher.jpg" alt="img">               
                 </div>
 
                 <div class="container text">
@@ -48,7 +48,7 @@
             <div class="content">
 
                 <div class="container img">
-                    <img src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220504_231306543.jpg" alt="img">               
+                    <img src="challenge.jpg" alt="img">               
                 </div>
 
                 <div class="container text">
