--- a/jaewon's.html
+++ b/jaewon's.html
@@ -9,7 +9,7 @@
 
     <body> 
             <video autoplay loop muted>
-                <source src="C:\Users\esthe\OneDrive\바탕 화면\KakaoTalk_20220503_214547332.mp4" type="video/mp4">
+                <source src="background.mp4" type="video/mp4">
             </video>
 
         <div class="logotext">
