--- a/aboutme.html
+++ b/aboutme.html
@@ -131,7 +131,7 @@
                 <div class="img-wrapper">
                     <div class="footer img">
                         <a href="https://github.com/esther9909/open_source_m.git">
-                            <img src="C:\Users\esthe\OneDrive\바탕 화면\github.png" alt="git">
+                            <img src="github.png" alt="git">
                          </a>   
                     </div>
                     
